# ros_priorities

./: CMakeLists.txt  package.xml
action/: ColorWithPrioAction.action
common/: CMakeLists.txt
common/include/: mode.h
common/src/: mode.cpp
include/: clientNode.h
include/prio_playground/: serverNode.h
msg/: ColorWithPrio.msg
src/: client.cpp  client.cpp~  clientNode.cpp  server.cpp  serverNode.cpp
